--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ dist/
 # Google OAuth credentials (sensitive - user must provide their own)
 data/credentials.json
 data/token.json
+data/backup/credentials.json
+data/backup/token.json
 
 # IDE
 .idea/
