--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^5.62.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "googleapis": "^169.0.0",
     "mssql": "^12.2.0",
     "react": "^18.3.1",
@@ -41,6 +42,7 @@
     "@playwright/test": "^1.52.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/express-session": "^1.18.2",
     "@types/mssql": "^9.1.8",
     "@types/node": "^25.0.3",
     "@types/react": "^18.3.23",
