--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ USE_SQL_DATABASE=false
 # Server Configuration
 PORT=5000
 NODE_ENV=development
+
+# API Authentication (for CLI/testing)
+# Generate with: node -e "console.log(require('crypto').randomUUID())"
+API_KEY=your-api-key-here
+
+# Default user email when using API key without X-Test-User header
+DEFAULT_USER=api@localhost
